# src/backend/core/api/openapi.json
@@ -2600,6 +2600,44 @@
                 }
             }
         },
+        "/api/v1.0/maildomains/{id}/": {
+            "get": {
+                "operationId": "maildomains_retrieve",
+                "description": "ViewSet for listing MailDomains the user administers.\nProvides a top-level entry for mail domain administration.\nEndpoint: /maildomains/",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid",
+                            "description": "primary key for the record as UUID"
+                        },
+                        "required": true
+                    }
+                ],
+                "tags": [
+                    "maildomains"
+                ],
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MailDomainAdmin"
+                                }
+                            }
+                        },
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/v1.0/messages/": {
             "get": {
                 "operationId": "messages_list",
@@ -2891,6 +2929,14 @@
                             "type": "integer"
                         },
                         "description": "Filter threads that have active messages (1=true, 0=false)."
+                    },
+                    {
+                        "in": "query",
+                        "name": "has_attachments",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "description": "Filter threads with attachments (1=true, 0=false)."
                     },
                     {
                         "in": "query",
@@ -3367,6 +3413,14 @@
                 "parameters": [
                     {
                         "in": "query",
+                        "name": "has_attachments",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "description": "Filter threads with attachments (1=true, 0=false)."
+                    },
+                    {
+                        "in": "query",
                         "name": "has_draft",
                         "schema": {
                             "type": "integer"
@@ -3432,7 +3486,7 @@
                                 "all_unread"
                             ]
                         },
-                        "description": "Comma-separated list of fields to aggregate.\n                Special values: 'all' (count all threads), 'all_unread' (count all unread threads).\n                Boolean fields: has_trashed, has_draft, has_starred, has_sender, has_active, is_spam, has_messages.\n                Unread variants ('_unread' suffix): count threads where the condition is true AND the thread is unread.\n                Examples: 'all,all_unread', 'has_starred,has_starred_unread', 'is_spam,is_spam_unread'",
+                        "description": "Comma-separated list of fields to aggregate.\n                Special values: 'all' (count all threads), 'all_unread' (count all unread threads).\n                Boolean fields: has_trashed, has_draft, has_starred, has_attachments, has_sender, has_active, is_spam, has_messages.\n                Unread variants ('_unread' suffix): count threads where the condition is true AND the thread is unread.\n                Examples: 'all,all_unread', 'has_starred,has_starred_unread', 'is_spam,is_spam_unread'",
                         "required": true,
                         "explode": false,
                         "style": "form"
@@ -3856,7 +3910,7 @@
             },
             "MailDomainAdmin": {
                 "type": "object",
-                "description": "Serialize MailDomain basic information for admin listing.",
+                "description": "Serialize mail domains for admin view.",
                 "properties": {
                     "id": {
                         "type": "string",
@@ -3881,10 +3935,15 @@
                         "readOnly": true,
                         "title": "Updated on",
                         "description": "date and time at which a record was last updated"
+                    },
+                    "expected_dns_records": {
+                        "type": "string",
+                        "readOnly": true
                     }
                 },
                 "required": [
                     "created_at",
+                    "expected_dns_records",
                     "id",
                     "name",
                     "updated_at"
@@ -3905,7 +3964,11 @@
                         "readOnly": true
                     },
                     "role": {
-                        "type": "string",
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/MailboxRoleChoices"
+                            }
+                        ],
                         "readOnly": true
                     },
                     "count_unread_messages": {
@@ -3946,7 +4009,7 @@
                     "role": {
                         "allOf": [
                             {
-                                "$ref": "#/components/schemas/MailboxAccessRoleEnum"
+                                "$ref": "#/components/schemas/MailboxRoleChoices"
                             }
                         ],
                         "readOnly": true
@@ -3979,7 +4042,7 @@
                     "role": {
                         "allOf": [
                             {
-                                "$ref": "#/components/schemas/MailboxAccessRoleEnum"
+                                "$ref": "#/components/schemas/MailboxRoleChoices"
                             }
                         ],
                         "readOnly": true
@@ -4007,15 +4070,6 @@
                     "user_details"
                 ]
             },
-            "MailboxAccessRoleEnum": {
-                "enum": [
-                    "viewer",
-                    "editor",
-                    "admin"
-                ],
-                "type": "string",
-                "description": "* `viewer` - Viewer\n* `editor` - Editor\n* `admin` - Admin"
-            },
             "MailboxAccessWrite": {
                 "type": "object",
                 "description": "Serializer for creating and updating mailbox access records.\nMailbox is set from the view based on URL parameters.",
@@ -4032,7 +4086,7 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/MailboxAccessRoleEnum"
+                        "$ref": "#/components/schemas/MailboxRoleChoices"
                     },
                     "created_at": {
                         "type": "string",
@@ -4052,6 +4106,7 @@
                 "required": [
                     "created_at",
                     "id",
+                    "role",
                     "updated_at",
                     "user"
                 ]
@@ -4066,10 +4121,11 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/MailboxAccessRoleEnum"
+                        "$ref": "#/components/schemas/MailboxRoleChoices"
                     }
                 },
                 "required": [
+                    "role",
                     "user"
                 ]
             },
@@ -4256,6 +4312,15 @@
                     "name"
                 ]
             },
+            "MailboxRoleChoices": {
+                "type": "string",
+                "enum": [
+                    "viewer",
+                    "editor",
+                    "sender",
+                    "admin"
+                ]
+            },
             "Message": {
                 "type": "object",
                 "description": "Serialize messages, getting parsed details from the Message model.\nAligns field names with JMAP where appropriate (textBody, htmlBody, to, cc, bcc).",
@@ -4384,6 +4449,10 @@
                     "is_trashed": {
                         "type": "boolean",
                         "readOnly": true
+                    },
+                    "has_attachments": {
+                        "type": "boolean",
+                        "readOnly": true
                     }
                 },
                 "required": [
@@ -4392,6 +4461,7 @@
                     "cc",
                     "created_at",
                     "draftBody",
+                    "has_attachments",
                     "htmlBody",
                     "id",
                     "is_draft",
@@ -4637,7 +4707,7 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/MailboxAccessRoleEnum"
+                        "$ref": "#/components/schemas/MailboxRoleChoices"
                     }
                 }
             },
@@ -4656,7 +4726,7 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/ThreadAccessRoleEnum"
+                        "$ref": "#/components/schemas/ThreadAccessRoleChoices"
                     }
                 }
             },
@@ -4777,6 +4847,10 @@
                         "type": "boolean",
                         "readOnly": true
                     },
+                    "has_attachments": {
+                        "type": "boolean",
+                        "readOnly": true
+                    },
                     "has_sender": {
                         "type": "boolean",
                         "readOnly": true
@@ -4814,7 +4888,11 @@
                         "description": "date and time at which a record was last updated"
                     },
                     "user_role": {
-                        "type": "string",
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/ThreadAccessRoleChoices"
+                            }
+                        ],
                         "readOnly": true
                     },
                     "accesses": {
@@ -4835,6 +4913,7 @@
                 "required": [
                     "accesses",
                     "has_active",
+                    "has_attachments",
                     "has_draft",
                     "has_messages",
                     "has_sender",
@@ -4874,7 +4953,7 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/ThreadAccessRoleEnum"
+                        "$ref": "#/components/schemas/ThreadAccessRoleChoices"
                     },
                     "created_at": {
                         "type": "string",
@@ -4895,6 +4974,7 @@
                     "created_at",
                     "id",
                     "mailbox",
+                    "role",
                     "thread",
                     "updated_at"
                 ]
@@ -4913,7 +4993,12 @@
                         "$ref": "#/components/schemas/MailboxLight"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/ThreadAccessRoleEnum"
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/ThreadAccessRoleChoices"
+                            }
+                        ],
+                        "readOnly": true
                     }
                 },
                 "required": [
@@ -4937,21 +5022,21 @@
                         "description": "primary key for the record as UUID"
                     },
                     "role": {
-                        "$ref": "#/components/schemas/ThreadAccessRoleEnum"
+                        "$ref": "#/components/schemas/ThreadAccessRoleChoices"
                     }
                 },
                 "required": [
                     "mailbox",
+                    "role",
                     "thread"
                 ]
             },
-            "ThreadAccessRoleEnum": {
+            "ThreadAccessRoleChoices": {
+                "type": "string",
                 "enum": [
                     "viewer",
                     "editor"
-                ],
-                "type": "string",
-                "description": "* `viewer` - Viewer\n* `editor` - Editor"
+                ]
             },
             "ThreadLabel": {
                 "type": "object",
@@ -5063,25 +5148,12 @@
                         "type": "string",
                         "readOnly": true,
                         "nullable": true
-                    },
-                    "short_name": {
-                        "type": "string",
-                        "readOnly": true,
-                        "nullable": true
-                    },
-                    "abilities": {
-                        "type": "object",
-                        "additionalProperties": {},
-                        "description": "Return abilities of the logged-in user on the mail domain.",
-                        "readOnly": true
                     }
                 },
                 "required": [
-                    "abilities",
                     "email",
                     "full_name",
-                    "id",
-                    "short_name"
+                    "id"
                 ]
             }
         },
